<resources>
    <string name="reg_dati">DATI</string>
    <string name="reg_posizione">POSIZONE</string>
    <string name="reg_userData_title">I TUOI DATI</string>
    <string name="pos_title_reg">La tua Posizione</string>
    <string name="chosefromMap">Scegli dalla mappa</string>
    <string name="mappa">Mappa</string>
    <string name="yourPos_reg">Dove ti trovi ora</string>
    <string name="reg_pos_info_subtitle">Puoi anche selezionarlo in seguito</string>
    <string name="hint_homepage_searchBar">Cerca</string>
    <string name="fullname_hint">Nome e cognome</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="conf_pass_hint">Conferma Password</string>
    <string name="username_hint">Username</string>
    <string name="search_hint">Cerca un oggetto</string>
    <string name="sell_form_hint_nome">Nome</string>
    <string name="ricerca_avanzata_title">Ricerca avanzata</string>
    <string name="ricerca_avanzata_title2">Dove lo stai cercando?</string>
    <string name="distanza_hint">DISTANZA</string>
    <string name="min_hint">MIN</string>
    <string name="max_hint">MAX</string>
    <string name="salva_la_tua_ricerca">SALVA LA TUA RICERCA</string>
    <string name="save_desc1">Riceverai una notifica quando un oggetto che rispecchia i parametri sarà disponibile</string>
    <string name="save_desc_2">Potrai trovarla successivamente nel tuo profilo</string>
    <string name="src_btn">CERCA</string>
    <string name="tra_src">TRA</string>
    <string name="and_src">E</string>
    <string name="err_not_empty">Il campo non può essere vuoto</string>
    <string name="log_err_email_format">Inserire un email valida</string>
    <string name="failed_login">Email o password non corretti, Riprova</string>
    <string name="reg_pos_placeholder">Nessun Indirizzo Inserito</string>
    <string name="reg_err_email_already">Email già in uso</string>
    <string name="reg_name_short_err">Il nome deve contenere almeno 3 caratteri</string>
    <string name="reg_username_length_err">L\'Username deve contenere min 3 e max 12 caratteri</string>
    <string name="reg_username_already_err">Questo username è già in uso</string>
    <string name="pass_err_length">La password deve essere almeno lunga 8 caratteri</string>
    <string name="pass_err_upper">La password deve contenere almeno una maiuscola</string>
    <string name="pass_err_digit">La password deve contenere almeno un numero</string>
    <string name="reg_no_spec_char">Non può contenere caratteri speciali</string>
    <string name="pos_err">Posizione obbligatoria</string>
    <string name="show_item_info">Info Oggetto</string>
    <string name="show_seller_info">Info Venditore</string>
    <string name="buy_item_btn">Compra Subito</string>
    <string name="chat_btn">CHAT</string>
    <string name="home_btn">home</string>
    <string name="home_btn_advSearch">ricerca avanzata</string>
    <string name="home_pref_btn">preferiti</string>
    <string name="home_res_btn">risultati</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="photo_remove_btn">Elimina una foto</string>
    <string name="add_photo_btn">Aggiungi una foto</string>
    <string name="description_title">DESCRIZIONE: </string>
    <string name="condition_title">Stato dell\'oggetto: </string>
    <string name="shipping_title">Spedito da: </string>
    <string name="home_username">Ciao </string>
    <string name="sellform_title">METTI IN VENDITA</string>
    <string name="app_name">PocketCart</string>
    <string name="reg_title">REGISTRAZIONE</string>
    <string name="reg_sub_title">Crea un\'account</string>
    <string name="app_description">REGISTRATI PER INIZIARE AD USARE L\'APP, SE POSSIEDI UN ACCOUNT EFFETTUA IL LOGIN </string>
    <string name="reg_button">REGISTRATI</string>
    <string name="log_button">LOGIN</string>
    <string name="log_no_acc">Non hai un account? Registrati</string>
    <string name="reg_have_acc">Hai già un account? Login</string>
    <string name="log_sub_title">EFFETTUA L\'ACCESSO</string>
    <string name="id_utente_homepage">Utente X</string>
    <string name="categoria_form_title">CATEGORIA E CONDIZIONE</string>
    <string name="categoria_title">Categoria</string>
    <string name="sub_category_title">Categoria</string>
    <string name="item_condition">Condizioni</string>
    <string name="sell_form_title_itemInfo">INFORMAZIONI GENERALI</string>
    <string name="cond0">Nuovo</string>
    <string name="cond1">Usato ma in perfette condizioni</string>
    <string name="cond2">Qualche lieve difetto</string>
    <string name="cond3">Difettoso</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_about_us_title">About Us</string>
    <string name="nav_profile">Profilo</string>
    <string name="nav_sell_item">Vendi un oggetto</string>
    <string name="item_description">BREVE DESCRIZIONE OGGETTO</string>
    <string name="item_price">PREZZO</string>
    <string name="base_photo_err">Inserire almeno 1 foto</string>
    <string name="price_title">SCEGLI UN PREZZO</string>
    <string name="pos_title">DOVE SI TROVA</string>
    <string name="shipping_switch">DISPONIBILITA\' A SPEDIRE</string>
    <string name="sell_btn">METTI IN VENDITA</string>
    <string name="price_err">Prezzo non valido</string>
    <string name="euro">€</string>
    <string name="your_pos_btn">Tua Posizione</string>
    <string-array name="categorie">
        <item> </item>
        <item>Elettronica</item>
        <item>Fashion</item>
        <item>Casa</item>
        <item>Salute</item>
        <item>Sport</item>
        <item>Libri</item>
        <item>Animali</item>
        <item>Macchina</item>
        <item>Ufficio</item>
    </string-array>
    <string-array name="sotto_categorie_empty">
        <item> </item>
    </string-array>
    <string-array name="sotto_categorie_elettronica">
        <item> </item>
        <item>Cellulari</item>
        <item>Laptop e PC</item>
        <item>Tablet e e-readers</item>
        <item>Fotocamera</item>
        <item>Gaming</item>
        <item>Altro</item>
    </string-array>
    <string-array name="sotto_categorie_fashion">
        <item> </item>
        <item>Vestiti Uomo</item>
        <item>Vestiti Donna</item>
        <item>Vestiti Bambino</item>
        <item>Scarpe</item>
        <item>Accessori</item>
        <item>Gioielli</item>
        <item>Altro</item>
    </string-array>
    <string-array name="sotto_categorie_casa">
        <item> </item>
        <item>Camera da letto</item>
        <item>Cucina</item>
        <item>Salotto</item>
        <item>Utensili</item>
        <item>Attrezzi da giardino</item>
        <item>Stoviglie</item>
        <item>Altro</item>
    </string-array>
    <string-array name="sotto_categorie_salute">
        <item> </item>
        <item>Skincare</item>
        <item>Makeup</item>
        <item>Prodotti per Capelli</item>
        <item>Bagno e Doccia</item>
        <item>Profumi</item>
        <item>Salute Personale</item>
        <item>Altro</item>

    </string-array>
    <string-array name="sotto_categorie_sport">
        <item> </item>
        <item>Calcio</item>
        <item>Tennis</item>
        <item>Pallavolo</item>
        <item>Basket</item>
        <item>Golf</item>
        <item>Nuoto</item>
        <item>Altro</item>
    </string-array>
    <string-array name="sotto_categorie_libri">
        <item> </item>
        <item>Gialli</item>
        <item>Non-Fiction</item>
        <item>Fiction</item>
        <item>Libri per Bambini</item>
        <item>Horror</item>
        <item>Romanzi</item>
        <item>Altro</item>
    </string-array>
    <string-array name="sotto_categorie_animali">
        <item> </item>
        <item>Cane</item>
        <item>Gatto</item>
        <item>Roditori</item>
        <item>Pesci</item>
        <item>Uccelli</item>
        <item>Altro</item>
    </string-array>
    <string-array name="sotto_categorie_macchina">
        <item> </item>
        <item>Accessori</item>
        <item>Manutenzione</item>
        <item>Audio</item>
        <item>Elettronica</item>
        <item>Car-Care</item>
        <item>Altro</item>
    </string-array>
    <string-array name="sotto_categorie_ufficio">
        <item> </item>
        <item>Accessori Scrivania</item>
        <item>Stampanti e Scanner</item>
        <item>Storage</item>
        <item>Forniture per Arredo</item>
        <item>Sedie da Scrivania</item>
        <item>Altro</item>
    </string-array>
    <string-array name="condizioni">
        <item> </item>
        <item>Nuovo</item>
        <item>Usato ma in perfette condizioni</item>
        <item>Qualche lieve difetto</item>
        <item>Difettoso</item>
    </string-array>
    <string-array name="condizioni_mod">
        <item>Nuovo</item>
        <item>Usato ma in perfette condizioni</item>
        <item>Qualche lieve difetto</item>
        <item>Difettoso</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="km_src">KM</string>
    <string name="price_src">Range di prezzo</string>
    <string name="sshipping_switch_src">Spedizione</string>
    <string name="ricerca_avanzata">Ricerca avanzata</string>
    <string name="about_us">
        .
    </string>
    <string name="dopo_l_acquisto">DOPO L\'ACQUISTO:</string>
    <string name="modifica">MODIFICA</string>
    <string name="spedito_a">SPEDITO A:</string>
    <string name="nome_placeholder">NOME PLACEHOLDER</string>
    <string name="descrizione_placeholder">Descrizione placeholder</string>
    <string name="prezzo_placeholder">Prezzo placeholder €</string>
    <string name="l_oggetto_si_trova_a">L\'OGGETTO SI TROVA A:</string>
    <string name="indirizzo_oggetto_placeholder">indirizzo oggetto placeholder</string>
    <string name="indirizzo_spedizione_placeholder_accordati_con_il_proprietario_per_il_ritiro_in_zona">indirizzo Spedizione placeholder/accordati con il proprietario per il ritiro in zona</string>
    <string name="il_tuo_saldo">IL TUO SALDO:</string>
    <string name="saldo_utente_placeholder_xx_xx">saldo utente placeholder = xx.xx</string>
    <string name="saldo_post_acquisto_xx_xx">saldo post acquisto = xx.xx</string>
    <string name="comferma_l_acquisto">Comferma l\'acquisto</string>
    <string name="sell_title">RIEPILOGO ORDINE</string>
    <string name="ban_text">Il tuo account è stato bloccato dall\'amministratore! Prego effettuare il Logout</string>
    <string name="mex_title">MESSAGGI</string>
    <string name="username">LOMBAX</string>
    <string name="input_mex_hint">Scrivi un mesaggio</string>
    <string name="mod_form_title">MODIFICA</string>
    <string name="prev">PRECENDENTE :</string>
    <string name="mod_btn">MODIFICA</string>
    <string name="user_name">LOMBAX</string>
    <string name="recharge_btn">RICARICA</string>
    <string name="update_pos">Aggiorna</string>
    <string name="profile_first_title">I Tuoi Acquisti</string>
    <string name="saved_search">Ricerche Salvate</string>
    <string name="profile_title_2">In Vendita</string>
    <string name="profiile_sold_history">Storico Vendite</string>
    <string name="mex_placeholder">Messaggio placeholder</string>
    <string name="date_placeholder">25-12-2001 15:18:03</string>
    <string name="base_pos_err">nessuna posizione selezionata</string>
    <string name="price_hint">0.00€</string>
    <string name="ammount_credit">IMPORTO</string>
    <string name="cvv_err">CVV errato</string>
    <string name="cvv_hint">CVV</string>
    <string name="expire_date_err">Errore data scadenza</string>
    <string name="mmaa_hint">MM/AA</string>
    <string name="expire_title_credit">Data di Scadenza</string>
    <string name="conf_pos_maps_frag">CONFERMA POSIZIONE</string>
</resources>