<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/reg_title"
            style="@style/MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/reg_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reg_sub_title"
            style="@style/MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/reg_sub_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_title" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reg"
            style="@style/button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/reg_button"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toTopOf="@id/reg_have_acc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/reg_have_acc"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/reg_have_acc"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/data_frag_btn"
            style="@style/buttonSwitch"
            android:layout_width="206dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/reg_dati"
            app:layout_constraintEnd_toStartOf="@id/pos_frag_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reg_sub_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pos_frag_btn"
            style="@style/buttonSwitch"
            android:layout_width="206dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@color/input_color_focussed"
            android:text="@string/reg_posizione"
            android:textColor="@color/text_color3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/data_frag_btn"
            app:layout_constraintTop_toBottomOf="@id/reg_sub_title" />

        <FrameLayout
            android:id="@+id/fragment_holder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/pos_frag_btn"
            app:layout_constraintBottom_toTopOf="@id/btn_reg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>