<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".FirstActivity">


    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textColor="@color/colorIconography"
        android:textSize="20sp"
        android:textStyle="bold"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />

    <ImageView
        android:id="@+id/app_image"
        android:layout_width="378dp"
        android:layout_height="249dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/sfondo_app"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/btnReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReg"
        style="@style/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/reg_button"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/log_button"
        android:layout_marginBottom="10dp"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
