<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/log_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_title"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/log_button"
        android:gravity="center"
        android:textStyle="bold"
        app:flow_horizontalAlign="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_login_title"
        style="@style/SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/log_sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:background="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_login_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/InputLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_field"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/InputLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/pass_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pass_err"
        style="@style/InputError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/email_err"
        style="@style/InputError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/no_account"
        style="@style/SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_no_acc"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/log_button"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/no_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>